fix: remove background color from style-og.css to enhance background image visibility

--- a/css/style-og.css
+++ b/css/style-og.css
@@ -10,7 +10,6 @@
 
 body {
     font-family: "comic sans ms", sans-serif;
-    background-color: #e1dfdb;
     background-image: url("../img/sfondo-og.jpg");
     background-size: cover;
     background-position: center;
